--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,107 +1,102 @@
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
 :root {
-  --max-width: 1100px;
-  --border-radius: 12px;
-  --font-mono: ui-monospace, Menlo, Monaco, 'Cascadia Mono', 'Segoe UI Mono',
-    'Roboto Mono', 'Oxygen Mono', 'Ubuntu Monospace', 'Source Code Pro',
-    'Fira Mono', 'Droid Sans Mono', 'Courier New', monospace;
-
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-
-  --primary-glow: conic-gradient(
-    from 180deg at 50% 50%,
-    #16abff33 0deg,
-    #0885ff33 55deg,
-    #54d6ff33 120deg,
-    #0071ff33 160deg,
-    transparent 360deg
-  );
-  --secondary-glow: radial-gradient(
-    rgba(255, 255, 255, 1),
-    rgba(255, 255, 255, 0)
-  );
-
-  --tile-start-rgb: 239, 245, 249;
-  --tile-end-rgb: 228, 232, 233;
-  --tile-border: conic-gradient(
-    #00000080,
-    #00000040,
-    #00000030,
-    #00000020,
-    #00000010,
-    #00000010,
-    #00000080
-  );
-
-  --callout-rgb: 238, 240, 241;
-  --callout-border-rgb: 172, 175, 176;
-  --card-rgb: 180, 185, 188;
-  --card-border-rgb: 131, 134, 135;
+    --max-width: 1100px;
+    --border-radius: 12px;
+    --bg-color: #ebebeb;
+    
+    --dom: #fff;
+    
+    --primary: #2760ff;
 }
 
 @media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
+    :root {
+        --bg-color: #181818;
+        --dom: #101010;
+    }
+}
+body{
+    background-color: var(--bg-color);
+}
+div#main{
+    width: 100vw;
+    height: 100vh;
+    background-color: var(--bg-color);
+    display: flex;
+    align-items: center;
+}
+nav{
+    position: absolute;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    padding: 10px;
+    gap: 15px;
+    width: 85px;
+    border-radius: var(--border-radius);
+    margin: 10px;
+    height: 98vh;
+    background-color: var(--dom);
+    transition: all .2s;
+    transform: translateX(-95px);
 
-    --primary-glow: radial-gradient(rgba(1, 65, 255, 0.4), rgba(1, 65, 255, 0));
-    --secondary-glow: linear-gradient(
-      to bottom right,
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0.3)
-    );
-
-    --tile-start-rgb: 2, 13, 46;
-    --tile-end-rgb: 2, 5, 19;
-    --tile-border: conic-gradient(
-      #ffffff80,
-      #ffffff40,
-      #ffffff30,
-      #ffffff20,
-      #ffffff10,
-      #ffffff10,
-      #ffffff80
-    );
-
-    --callout-rgb: 20, 20, 20;
-    --callout-border-rgb: 108, 108, 108;
-    --card-rgb: 100, 100, 100;
-    --card-border-rgb: 200, 200, 200;
-  }
+    &:hover, &.true{
+        transform: translateX(0px);
+    }
 }
 
-* {
-  box-sizing: border-box;
-  padding: 0;
-  margin: 0;
+a.serverBtn{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 65px;
+    height: 65px;
+    overflow: hidden;
+    background-color: var(--primary);
+    cursor: pointer;
+    transition: all .5s;
+    transition-timing-function: cubic-bezier(0.075, 0.82, 0.165, 1);
+    
+    border-radius: 35px;
+    
+
+    &.true{
+        border-radius: var(--border-radius);
+    }
+    &:hover{
+        border-radius: var(--border-radius);
+    }
+
+    > img{
+        width: 100%;
+        height: 100%;
+        
+        &[src="logo.svg"]{
+            padding: 10px;
+        }
+    }
 }
 
-html,
-body {
-  max-width: 100vw;
-  overflow-x: hidden;
+hr{
+    width: 90%;
+    margin: 5px 0;
+    border: solid var(--bg-color);
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+main{
+    width: 100vw;
+    height: 100vh;
+    /* background-color: red; */
 }
 
-a {
-  color: inherit;
-  text-decoration: none;
-}
-
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
+input{
+    bottom: 10px;
+    position: absolute;
+    width: 100%;
+    background-color: var(--dom);
+    border: 0;
 }
