--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,13 +1,16 @@
+@import url("https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.8/dist/web/static/pretendard.css");
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: "pretendard";
 }
 :root {
     --max-width: 1100px;
     --border-radius: 12px;
+    --input: #cecece;
     --bg-color: #ebebeb;
-    
+    --reverse: #181818; 
     --dom: #fff;
     
     --primary: #2760ff;
@@ -16,11 +19,14 @@
 @media (prefers-color-scheme: dark) {
     :root {
         --bg-color: #181818;
+        --input: #212121;
+        --reverse: #ebebeb; 
         --dom: #101010;
     }
 }
 body{
     background-color: var(--bg-color);
+    overflow: hidden;
 }
 div#main{
     width: 100vw;
@@ -28,6 +34,7 @@ div#main{
     background-color: var(--bg-color);
     display: flex;
     align-items: center;
+    overflow: hidden;
 }
 nav{
     position: absolute;
@@ -47,6 +54,7 @@ nav{
     &:hover, &.true{
         transform: translateX(0px);
     }
+    z-index: 1000;
 }
 
 a.serverBtn{
@@ -58,7 +66,7 @@ a.serverBtn{
     overflow: hidden;
     background-color: var(--primary);
     cursor: pointer;
-    transition: all .5s;
+    transition: all 1s;
     transition-timing-function: cubic-bezier(0.075, 0.82, 0.165, 1);
     
     border-radius: 35px;
@@ -69,13 +77,14 @@ a.serverBtn{
     }
     &:hover{
         border-radius: var(--border-radius);
+        transform: rotate(5deg) scale(1.3);
     }
 
     > img{
         width: 100%;
         height: 100%;
         
-        &[src="logo.svg"]{
+        &[src="/logo.svg"]{
             padding: 10px;
         }
     }
@@ -88,15 +97,91 @@ hr{
 }
 
 main{
+    display: flex;
+    flex-direction: column-reverse;
+    gap: 20px;  
+    color: var(--reverse);
+    padding-left: 5%;
+    padding-right: 50px;
+    padding-bottom: 100px;
     width: 100vw;
     height: 100vh;
     /* background-color: red; */
 }
 
-input{
+#messageSender{
     bottom: 10px;
     position: absolute;
     width: 100%;
+    display: flex;
+    justify-content: center;
+    gap: 10px;
+
+    > [type="text"]{
+        border-radius: calc(var(--border-radius)/2);
+        padding-left: 10px;
+        font-size: 20px;
+        width: 90%;
+        background-color: var(--input);
+        border: 0;
+        height: 50px;
+        color: var(--reverse);
+        &:focus{
+            outline: 0;
+        }
+    }
+    > img{
+        border-radius: calc(var(--border-radius)/2);
+
+        width: 50px;
+        background-color: var(--input);
+        border: 0;
+        height: 50px;
+        color: var(--reverse);
+        padding: 5px;
+        cursor: pointer;
+    }
+}
+
+aside{
+    position: absolute;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    padding: 30px;
+    right: 0;
+    gap: 15px;
+    width: 300px;
+    border-radius: var(--border-radius);
+    margin: 10px;
+    height: 98vh;
     background-color: var(--dom);
-    border: 0;
+    transition: all .2s;
+    transform: translateX(110%);
+
+    &:hover, &.true{
+        transform: translateX(0px);
+    }
+    z-index: 1000;
+}
+.userInfo{
+    display: flex;
+    align-items: center;
+    color: var(--reverse);
+    gap: 15px;
+    overflow: hidden;
+    width: 100%;
+    font-size: larger;
+    
+    > img{
+        width: 50px;
+        border-radius: 100%;
+    }
+    > span{
+        position: absolute;
+        width: 15px;
+        height: 50px;
+        right: 30px;
+        background: linear-gradient(90deg, #00000000, var(--dom), var(--dom));
+    }
 }
